Fix apply column spacing

--- a/src/css/art-to-heart-styles.css
+++ b/src/css/art-to-heart-styles.css
@@ -45,7 +45,7 @@ h2 {
 
 h3 {
     font-size: 2rem;
-    line-height: 2.5rem;
+    line-height: 2rem;
 }
 
 a {
@@ -216,7 +216,7 @@ a {
 .clip-bottom {
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: start;
     position: absolute;
     clip-path: polygon(50% 27.25%, 99.75% 0.25%, 99.75% 99.75%, 0.25% 99.75%, 0.25% 0.25%);
     padding: 0 2rem;
@@ -264,8 +264,7 @@ a {
 }
 
 .column-one-top, .column-two-top, .column-three-top {
-    height: 6rem;
-    margin-top: 2rem;
+    padding-top: 10rem;
 }
 
 .column-one-top {
@@ -283,27 +282,22 @@ a {
 .column-one-bottom, .column-two-bottom, .column-three-bottom {
     text-align: center;
     background-repeat: no-repeat;
+    margin-top: auto;
 }
 
 .column-one-bottom {
     background-image: url("/assets/img/art-to-heart-images/steps/step-1-crayon-2.png");
-    background-size: 3rem;
-    background-position: bottom 1rem right 2rem;
-    margin-top: 4rem;
+    background-position: top right 2rem;
 }
 
 .column-two-bottom {
     background-image: url("/assets/img/art-to-heart-images/steps/step-2-crayon-1.png"), url("/assets/img/art-to-heart-images/steps/step-2-crayon-2.png");
-    background-size: 4rem, 3rem;
     background-position: bottom left 2rem, right 1rem bottom;
-    margin-top: 4rem;
 }
 
 .column-three-bottom {
     background-image: url("/assets/img/art-to-heart-images/steps/step-3-crayon-3.png"), url("/assets/img/art-to-heart-images/steps/step-3-crayon-2.png");
-    background-size: 4rem;
     background-position: bottom left, right 2rem top;
-    padding: 4rem 0 6rem;
 }
 
 .apply-button, .submit-button {
@@ -315,7 +309,8 @@ a {
     border: none;
     width: 100%;
     height: 48px;
-    margin-bottom: 4rem;
+    margin-top: auto;
+    margin-bottom: 2rem;
     color: #FFF;
     cursor: pointer;
 }
